[package]
name = "oxmpl-py"
version = "0.1.0"
edition = "2021"
authors = ["Junior Sundar <juniorsundar@gmail.com>"]
description = "Python bindings for the oxmpl library"
license = "MIT"

[lib]
name = "oxmpl_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
oxmpl = { path = "../oxmpl" }
