[package]
name = "oxmpl-py"
version = "0.1.0"
edition = "2021"
authors = ["Junior Sundar <juniorsundar@gmail.com>"]
description = "Python Bindings for the OxMPL Library"
license = "BSD-3"

[lib]
name = "oxmpl_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
oxmpl = { path = "../oxmpl" }
rand = "0.9.1"
